still on the reversion thing

--- a/ClaimyWebApps/ClaimyWebApps/Views/Customer/LoggedInMainPage.cshtml
+++ b/ClaimyWebApps/ClaimyWebApps/Views/Customer/LoggedInMainPage.cshtml
@@ -27,6 +27,6 @@
         $(document).ready(function() {
             $("#claims").DataTable();
         })
-        
+        //try 
     </script>
 }
