added save method to Claims

--- a/ClaimyWebApps/ClaimyWebApps/Views/Claim/NewClaim.cshtml
+++ b/ClaimyWebApps/ClaimyWebApps/Views/Claim/NewClaim.cshtml
@@ -6,7 +6,7 @@
 
 <h2>NewClaim</h2>
 
-@using (Html.BeginForm("NewClaim", "Claim"))
+@using (Html.BeginForm("Save", "Claim"))
 {
     <div id="FeeNum" class="form-group">
         @Html.LabelFor(m => m.Claim.FeeNum)
