--- a/ClaimyWebApps/ClaimyWebApps/Views/Home/Index.cshtml
+++ b/ClaimyWebApps/ClaimyWebApps/Views/Home/Index.cshtml
@@ -1,4 +1,4 @@
-﻿<!DOCTYPE html>
+﻿@model ClaimyWebApps.Models.Claim
 <html lang="en">
 <title>Home Page</title>
 <meta charset="UTF-8">
@@ -19,18 +19,20 @@
         font-size: 200px
     }
 </style>
+
 <body>
-<header class="w3-container w3-red w3-center" style="padding:128px 16px">
+
+    <header class="w3-container w3-red w3-center" style="padding: 128px 16px">
         <h1 class="w3-margin w3-jumbo">CLAIMY</h1>
-        <button class="w3-button w3-black w3-padding-large w3-large w3-margin-top">Create a New Case</button>
+       
+        @Html.ActionLink("Create a New Claim", "NewClaim", "Claim", null, new { @class = "w3-button w3-black w3-padding-large w3-large w3-margin-top" })
     </header>
 
-<div class="w3-row-padding w3-padding-64 w3-center w3-container">
-    <button class="w3-button w3-black w3-padding-small w3-small w3-margin-buttom">Create Account</button>
-</div>
+    <div class="w3-row-padding w3-padding-64 w3-center w3-container">
+    </div>
 
-<div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
-        <h1 class="w3-margin w3-xlarge">About Us</h1>
+    <div class="w3-container w3-black w3-center w3-opacity w3-padding-64">
+        <h1 class="w3-margin w3-xlarge">Contact us at: info@claimy.dk</h1>
     </div>
 </body>
 </html>
